<resources>
    <string name="app_name">Global IT Inquiry</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="strHome">Home</string>
    <string name="strUsername">Username</string>
    <string name="strPassword">Password</string>
    <string name="strLoginNow">Login Now</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="toast_no_internet">Please check internet connection</string>
    <string name="permission_never_asked">Global IT has required some permissions to proceed. Please Enable them from setting.</string>
    <string name="strLoginNote">Username and Password are Auto-generated by Global IT Infosolution</string>
    <string name="title_activity_dashboard2">DashboardActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="strPhotoGallery">Photo Gallary</string>
    <string name="strViewOnMap">View On Map</string>
    <string name="strAboutUs">About Us</string>
    <string name="strLogout">LogOut</string>
    <string name="strShare">Share</string>
    <string name="strPhone">Phone</string>
    <string-array name="predefined_sms">
    </string-array>
    <string-array name="array_referenceBY">
        <item>Select Reference</item>
        <item>Self</item>
        <item>Friend</item>
        <item>Online Advertisement</item>
        <item>Global IT Partner</item>
    </string-array>
    <string-array name="photo_attachment_formats">
        <item>jpg</item>
        <item>jpeg</item>
        <item>png</item>
    </string-array>
    <string-array name="batch_details">
        <item>Select Batch</item>
        <item>10th Maths</item>
        <item>10th Science</item>
        <item>10th English</item>
        <item>11th Maths</item>
        <item>11th Physics</item>
        <item>12th Maths</item>
        <item>12th Science</item>
        <item>9th Maths</item>
        <item>9th Science</item>
        <item>9th English</item>
        <item>8th Maths</item>
        <item>8th Science</item>
        <item>8th English</item>
        <item>7th Maths</item>
        <item>7th Science</item>
        <item>7th English</item>
    </string-array>
    <string-array name="video_attachment_formats">
        <item>mp4</item>
        <item>3gp</item>
        <item>mkv</item>
        <item>avi</item>
        <item>flv</item>
    </string-array>
    <string-array name="array_course_select">
    </string-array>
    <string-array name="array_standard_select">
        <item>Select Standard</item>
    </string-array>
    <string-array name="array_stream_select">
        <item>Select Stream</item>
    </string-array>
    <string-array name="array_course_duration">
        <item>1 Month</item>
        <item>2 Month</item>
        <item>3 Month</item>
        <item>4 Month</item>
        <item>5 Month</item>
        <item>6 Month</item>
        <item>7 Month</item>
        <item>8 Month</item>
        <item>9 Month</item>
        <item>10 Month</item>
        <item>11 Month</item>
        <item>11 Month</item>
        <item>12 Month</item>
        <item>1 Year</item>
        <item>1.5 Year</item>
        <item>2 Year</item>
        <item>2.5 Year</item>
        <item>3 Year</item>
        <item>3.5 Year</item>
        <item>4 Year</item>
    </string-array>
    <string-array name="array_course_status">
        <item>Select Course Status</item>
        <item>Running</item>
        <item>Pending</item>
        <item>Suspended</item>
        <item>Completed</item>
        <item>Other</item>
    </string-array>
    <string-array name="course_status">
        <item>Running</item>
        <item>Pending</item>
        <item>Suspended</item>
        <item>Completed</item>
        <item>Other</item>
    </string-array>
    <string-array name="array_yes_no">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="array_subject_select">
        <item>Select Subject</item>
    </string-array>
    <string-array name="array_partner_select">
        <item>Select Partner</item>
    </string-array>
    <string-array name="array_sms_type">
        <item>Select SMS Type</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strSubmitInquiry">Submit Inquiry</string>
    <string name="strFirstname">First Name</string>
    <string name="strLastname">Last Name</string>
    <string name="strMobileno">Mobile no</string>
    <string name="strReferenceBY">Reference By</string>
    <string name="strFeedback">Feedback</string>
    <string name="strcourseselect">Select Course</string>
    <string name="strInquiryFormText">Inquiry Form</string>
    <string name="strStandard">Standard</string>
    <string name="strStream">Stream</string>
    <string name="strSubject">Subject</string>
    <string name="searchhere">Search Here</string>
    <string name="strSearchHere">Search Here</string>
    <string name="strContactNumber">Contact Number</string>
    <string name="strPersonName">Person Name</string>
    <string name="strHeading">Inquiry Report</string>
    <string name="status_inquiry">Status Inquiry</string>
    <string name="strSendbtn">Send</string>
    <string name="strSmsType">Start Typing Here ...</string>
    <string name="strGIT">GIT Inquiry</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="YES">YES</string>
    <string name="Cancel">Cancel</string>
    <string name="search_title">Search</string>
    <string name="strCall">Call</string>
    <string name="strSms">SMS</string>
    <string name="strNotification">Notification Settings</string>
    <string name="strCourse">Course</string>
    <string name="strApply">APPLY</string>
    <string name="strToday">Today</string>
    <string name="strTomorrow">Tomorrow</string>
    <string name="strDays">7 Days</string>
    <string name="action_courses">Courses</string>
    <string name="strStudentPersonalDetails">Personal Details</string>
    <string name="strSubmit">Save</string>
    <string name="strView">View</string>
    <string name="strAddNew">Add New</string>
    <string name="strStudentCourseDetails">Course Details</string>
    <string name="strInstallmentDate">Installment Date</string>
    <string name="strJoiningDate">Joining Date</string>
    <string name="edit_details">Edit Details</string>
    <string name="strReferenceTest">Self</string>
    <string name="strInquiryDate"> InquiryDate</string>
    <string name="strUpcomingDate">Upcoming Date</string>
    <string name="strStudentStandardDetails">Standard Details</string>
    <string name="strDuration">Duration</string>
    <string name="strCourseStatus">Course Status</string>
    <string name="strCertificate">Certificate</string>
    <string name="strBookMaterial">Book Material</string>
    <string name="strBag">Bag</string>
    <string name="strFees">Course Fees</string>
    <string name="strCancel">Cancel</string>
    <string name="strAddedCourses">Added Courses</string>
    <string name="strOkay">Okay</string>
    <string name="toast_invalid_username">Please, Enter valid Username.</string>
    <string name="toast_invalid_password">Please, Enter valid Password.</string>
    <string name="strAllSelect">All</string>
    <string name="strName">Students</string>
    <string name="strPersonImage">Image</string>
    <string name="strOutRequired">Out Required</string>
    <string name="strFiterByDate">Filter By Date</string>
    <string name="strFilterBetweenDates">Filter Between Dates</string>
    <string name="strFilterByMonthYear">Filter By Month Or Year</string>
    <string name="strFilterByYear">Filter By Year</string>
    <string name="strNoDataFound">No data found</string>
    <string name="strStudentDurationDetails">Duration Details</string>
    <string name="strOdhavBranchAddress">2nd Floor, Raghuvilla Avenue, near navrang school, Ambica Nagar, Odhav, Indravihar Park Society, Vallabha Nagar, Odhav, Ahmedabad, Gujarat 382415</string>
    <string name="strStatusInquiry">Status Inquiry</string>
    <string name="strPredefinedMsg">Choose Predefined Message</string>
    <string name="strlorem_epsum">Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. It\'s also called placeholder (or filler) text. It\'s a convenient tool for mock-ups</string>
    <string name="strDefault">By Default Message</string>
    <string name="strViral">Viral</string>
    <string name="tab_text">Course</string>
    <string name="ic_android">Standard</string>
    <string name="strBatch">Batch Details</string>
    <string name="strPromptRefer">-- Select Reference --</string>
    <string name="twodays">After Two Days</string>
    <string name="notisettings">Notification Settings</string>
    <string name="strCallnow">Call Now</string>
    <string name="toast_invalid_firstname">Enter First Name</string>
    <string name="toast_invalid_lastname">Enter Last Name</string>
    <string name="toast_invalid_mobile">Enter Mobile Number</string>
    <string name="toast_invalid_feedback">Please Enter Feedback</string>
    <string name="toast_invalid_reference">Enter Your Reference</string>
    <string name="toast_invalid_course">Select Valid Course</string>
    <string name="toast_invalid_standard">Select Valid Standard</string>
    <string name="toast_invalid_stream">Select Valid Stream</string>
    <string name="toast_invalid_subject">Select Valid Subject</string>
    <string name="toast_invalid_inquiry">Please Enter Inquiry Date</string>
    <string name="toast_invalid_upcoming">Please Enter Upcoming Date</string>
    <string name="toast_invalid_phone_number">Number should contains 10 digits</string>
    <string name="strRunnning">Running</string>
    <string name="strCompleted">Completed</string>
    <string name="strSmsandnotification">Sms And Notification</string>
    <string name="strFilterByCourse">Filter By Course</string>
    <string name="strFilterByMonth">Filter By Month</string>
    <string name="strFilterByStandard">Filter By Standard</string>
    <string name="strCourseName">Course Name</string>
    <string name="strApplyFilter">Apply</string>
    <string name="floatingTransition">FloatingTransition</string>
    <string name="swipeRight">Swipe Right For Further Steps</string>
    <string name="toast_invalid_length_firstname">Firstname should be of more than two characters.</string>
    <string name="toast_invalid_length_lastname">Lastname should be of more than two characters.</string>
    <string name="strSelectUpcomingDate">Select upcoming Date</string>
    <string name="strprevious">Previous</string>
    <string name="strSelectInquiryDate">Select Inquiry Date</string>
</resources>