<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FormSecondFragment">

    <ScrollView
        android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_submit_inquiry"
        android:background="@drawable/border3"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fadeScrollbars="false"
        android:scrollbars="vertical">

        <RelativeLayout
            android:id="@+id/layout_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_other_course3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:visibility="visible"
                app:hintTextAppearance="@style/TextInputLayout" >

                <EditText
                    android:id="@+id/edt_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_35"
                    android:layout_marginBottom="@dimen/size_10"
                    android:background="@drawable/edittextround"
                    android:hint="@string/strFeedback"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:theme="@style/ColoredHandleTheme"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/bv_primaryDarkColor"
                    android:paddingLeft="@dimen/dimen_18"
                    android:singleLine="true"
                    android:textSize="@dimen/size_18" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_reference_by"
                style="@style/textview_normal_form"
                android:text="@string/strReferenceBY"
                android:layout_below="@+id/text_input_other_course3"/>

            <Spinner
                android:id="@+id/spinner_referenceBy"
                android:layout_width="match_parent"
                android:layout_below="@+id/tv_reference_by"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:background="@drawable/edittextround"
                android:entries="@array/array_referenceBY"
                android:padding="@dimen/dimen_10">

            </Spinner>

            <TextView
                android:id="@+id/tv_course_select"
                style="@style/textview_normal_form"
                android:layout_below="@+id/spinner_referenceBy"
                android:text="@string/strcourseselect">

            </TextView>

            <Spinner
                android:id="@+id/spinner_course_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_course_select"
                android:layout_marginBottom="@dimen/size_10"
                android:background="@drawable/edittextround"
                android:entries="@array/array_course_select"
                android:padding="@dimen/size_10"
                android:spinnerMode="dialog">

            </Spinner>

            <TextView
                android:id="@+id/tv_standard"
                android:layout_below="@+id/spinner_course_select"
                style="@style/textview_normal_form"
                android:text="@string/strStandard" />

            <Spinner
                android:id="@+id/spinner_standard_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_10"
                android:background="@drawable/edittextround"
                android:spinnerMode="dialog"
                android:layout_below="@+id/tv_standard"
                android:entries="@array/array_standard_select"
                android:padding="@dimen/dimen_10">
            </Spinner>

            <TextView
                android:id="@+id/tv_stream"
                android:layout_below="@+id/spinner_standard_select"
                style="@style/textview_normal_form"
                android:text="@string/strStream" />

            <Spinner
                android:id="@+id/spinner_stream_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_stream"
                android:layout_marginBottom="@dimen/size_10"
                android:background="@drawable/edittextround"
                android:entries="@array/array_stream_select"
                android:padding="@dimen/size_10">
            </Spinner>

            <TextView
                android:id="@+id/tv_subject"
                android:layout_below="@+id/spinner_stream_select"
                style="@style/textview_normal_form"
                android:text="@string/strSubject" />

            <Spinner
                android:id="@+id/spinner_subject_select"
                android:layout_width="match_parent"
                android:layout_below="@+id/tv_subject"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_10"
                android:background="@drawable/edittextround"
                android:entries="@array/array_subject_select"
                android:padding="@dimen/size_10">
            </Spinner>

            <Button
                android:id="@+id/iv_arrow_right"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_rounded"
                android:layout_gravity="start"
                android:text="@string/strprevious"
                android:textSize="@dimen/font_size_18"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:padding="@dimen/dimen_10"
                android:layout_below="@+id/spinner_subject_select"
                android:layout_marginTop="@dimen/dimen_10">
            </Button>

            <Button
                android:id="@+id/tv_submit_inquiry"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_rounded"
                android:padding="@dimen/dimen_10"
                android:text="Submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_below="@+id/spinner_subject_select"/>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>